# Assignment-02-UV-Project-Setup--Simple-Packaged-Applications

uv-assignment/: .gitignore
uv-assignment/packaged-app/: README.md  pyproject.toml
uv-assignment/packaged-app/src/my_packaged_app/: main.py
uv-assignment/simple-app/: README.md  main.py
